Restore Radarr, Sonarr

--- a/servarr/playbook.yml
+++ b/servarr/playbook.yml
@@ -14,6 +14,6 @@
   tasks:
     - include: tasks/nzbget.yml
     - include: tasks/transmission.yml
-    # - include_tasks: tasks/sonarr.yml
-    # - include_tasks: tasks/radarr.yml
+    - include_tasks: tasks/sonarr.yml
+    - include_tasks: tasks/radarr.yml
     # - include_tasks: tasks/backup.yml
