--- a/servarr/tasks/sonarr.yml
+++ b/servarr/tasks/sonarr.yml
@@ -1,11 +1,10 @@
 ---
-- name: Stop Sonarr
-  ansible.builtin.service:
-    name: sonarr
-    state: stopped
-  notify:
-    - Start Sonarr
-  when: "sonarr/{{ item }} is file"
+- name: Check for Sonarr files
+  delegate_to: localhost
+  ansible.builtin.stat:
+    path: "{{ files_dir }}/sonarr/{{ item }}"
+  register: sf
+  ignore_errors: True
   with_items:
     - sonarr.db
     - sonarr.db-journal
@@ -13,18 +12,37 @@
     - nzbdrone.db-journal
     - config.xml
 
+- name: Stop Sonarr
+  ansible.builtin.service:
+    name: sonarr
+    state: stopped
+  notify:
+    - Start Sonarr
+  when: item.stat.exists
+  with_items: "{{ tf.results }}"
+  # when: "sonarr/{{ item }} is file"
+  # with_items:
+  #   - sonarr.db
+  #   - sonarr.db-journal
+  #   - nzbdrone.db
+  #   - nzbdrone.db-journal
+  #   - config.xml
+
 - name: Restore Sonarr data
   ansible.builtin.copy:
-    src: "sonarr/{{ item }}"
+    src: "{{ item.stat.path }}"
     dest: /var/lib/sonarr/
     backup: yes
     mode: 0644
     owner: sonarr
     group: sonarr
-  when: "sonarr/{{ item }} is file"
-  with_items:
-    - sonarr.db
-    - sonarr.db-journal
-    - nzbdrone.db
-    - nzbdrone.db-journal
-    - config.xml
+  ignore_errors: True
+  when: item.stat.exists
+  with_items: "{{ sf.results }}"
+  # when: "sonarr/{{ item }} is file"
+  # with_items:
+  #   - sonarr.db
+  #   - sonarr.db-journal
+  #   - nzbdrone.db
+  #   - nzbdrone.db-journal
+  #   - config.xml
