--- a/servarr/handlers/main.yml
+++ b/servarr/handlers/main.yml
@@ -18,3 +18,11 @@
   ansible.builtin.service:
     name: radarr
     state: started
+
+- name: Save iptables v4 rules
+  ansible.builtin.shell: iptables-save > /etc/iptables/rules.v4
+  listen: Persist iptables rules
+
+- name: Save iptables v6 rules
+  ansible.builtin.shell: ip6tables-save > /etc/iptables/rules.v6
+  listen: Persist iptables rules
