--- a/swarm-node/requirements.yml
+++ b/swarm-node/requirements.yml
@@ -1,5 +1,4 @@
 ---
 collections:
-  - ansible.general.timezone
-  - community.docker.docker_swarm
-  - community.docker.docker_stack
+  - name: community.docker
+    type: galaxy
