--- a/swarm-node/tasks/docker.yml
+++ b/swarm-node/tasks/docker.yml
@@ -11,14 +11,14 @@
 
 - name: Add docker gpg key
   ansible.builtin.apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
+    url: https://download.docker.com/linux/debian/gpg
     state: present
     keyring: /etc/apt/keyrings/docker.gpg
 
 - name: Add docker repository
   ansible.builtin.apt_repository:
     filename: docker 
-    repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename|lower }} stable
+    repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian {{ ansible_lsb.codename|lower }} stable
     state: present
 
 - name: Install docker engine
