--- a/swarm-node/vars/vars.yml
+++ b/swarm-node/vars/vars.yml
@@ -1,4 +1,6 @@
 ---
-swarm_node_join_swarm: true
-swarm_node_remote_ip_addr: "{{ enc_swarm_node_remote_ip_addr }}"
-swarm_node_join_token: "{{ enc_swarm_node_join_token }}"
+swarm_node__join_swarm: false
+swarm_node__remote_ip_addr: "{{ enc_swarm_node__remote_ip_addr }}"
+swarm_node__join_token: "{{ enc_swarm_node__join_token }}"
+swarm_node__docker_host: "{{ enc_swarm_node__docker_host }}"
+swarm_node__advertise_addr: "eth0:23777"
