--- a/swarm-node/tasks/9p-mounts.yml
+++ b/swarm-node/tasks/9p-mounts.yml
@@ -5,7 +5,7 @@
 - name: Add 9P mount to fstab
   ansible.builtin.lineinfile:
     path: /etc/fstab
-    regexp: /^ct_data.*/
+    regexp: "^ct_data.*"
     line: "ct_data /ct_data        9p      trans=virtio,version=9p2000.L,_netdev,msize=104857600   0       0"
     state: present
   notify:
