--- a/swarm-node/vm-playbook.yml
+++ b/swarm-node/vm-playbook.yml
@@ -13,4 +13,5 @@
     - include_tasks: tasks/join-swarm.yml
     - include_tasks: tasks/portainer.yml
   handlers:
-    - include: handlers/mount.yml
+    - include_tasks: handlers/mount.yml
+    - include_tasks: handlers/sshd.yml
