Lock SSH down (#67)
* Lock SSH down

* Fix typos

--- a/swarm-node/vm-playbook.yml
+++ b/swarm-node/vm-playbook.yml
@@ -8,8 +8,10 @@
   tasks:
     - include_tasks: tasks/qemu-agent.yml
     - include_tasks: tasks/9p-mounts.yml
+    - include_tasks: tasks/sshd.yml
     - include_tasks: tasks/docker.yml
     - include_tasks: tasks/join-swarm.yml
     - include_tasks: tasks/portainer.yml
   handlers:
-    - include: handlers/mount.yml
+    - include_tasks: handlers/mount.yml
+    - include_tasks: handlers/sshd.yml
