--- a/borgbackup/tasks/borg.yml
+++ b/borgbackup/tasks/borg.yml
@@ -4,7 +4,7 @@
     name: "{{ item }}"
     state: present
   with_items:
-    - borg
+    - borgbackup
     - borgmatic
   notify: enable_borgmatic_service
 
