--- a/borgbackup/playbook.yml
+++ b/borgbackup/playbook.yml
@@ -10,5 +10,5 @@
     - include_tasks: tasks/sshd.yml
     - include_tasks: tasks/borg.yml
   handlers:
-    - include_tasks: handlers/sshd.yml
-    - include_tasks: handlers/borg.yml
+    - import_tasks: handlers/sshd.yml
+    - import_tasks: handlers/borg.yml
