--- a/borgbackup/tasks/borg.yml
+++ b/borgbackup/tasks/borg.yml
@@ -49,9 +49,9 @@
 
 - name: Add repos to known_hosts
   ansible.builtin.known_hosts:
-    name: "{{ item.ssh.host_name }}"
-    key: "{{ item.ssh.host_hash }}"
+    name: "{{ item.ssh.hostname }}"
+    key: "{{ lookup('pipe', 'ssh-keyscan -H {{ item.ssh.hostname }}') }}"
     path: /root/.ssh/known_hosts
     state: present
   with_items: "{{ borg_repos }}"
-  when: item.ssh.host_hash is defined
+  when: item.ssh.hostname is defined
