Check that local repo dirs are writeable

--- a/borgbackup/tasks/borg.yml
+++ b/borgbackup/tasks/borg.yml
@@ -1,4 +1,20 @@
 ---
+- name: Get stat for local backup repo dirs
+  ansible.builtin.stat:
+    path: "{{ item.repo }}"
+  register: local_backup_paths
+  with_items: "{{ borg_repos }}"
+  when: item.ssh.hostname is not defined
+
+- name: Local backup repo dirs are writeable
+  ansible.builtin.assert:
+    that:
+      - item.stat.writeable
+    fail_msg: "{{ item.stat.path }} is not writeable. Check permissions or UID/GID mapping in LXC container"
+    quiet: true
+  with_items: "{{ local_backup_paths.results }}"
+  when: item.stat is defined
+
 - name: Install borg and borgmatic
   ansible.builtin.package:
     name: "{{ item }}"
