Avoid running a new backup with every config file change

--- a/borgbackup/handlers/borg.yml
+++ b/borgbackup/handlers/borg.yml
@@ -3,5 +3,5 @@
   listen: enable_borgmatic_service
   ansible.builtin.service:
     name: borgmatic
-    state: restarted
+    state: started
     enabled: true
