--- a/borgbackup/handlers/borg.yml
+++ b/borgbackup/handlers/borg.yml
@@ -3,4 +3,8 @@
   listen: enable_borgmatic_service
   ansible.builtin.service:
     name: borgmatic
+    # Setting state: started makes it run a full backup every time because the
+    # service type is `oneshot` and it will run `ExecStart` and wait for it to
+    # finish before continuing. This would also make the playbook run take
+    # quite a while.
     enabled: true
